# NevstruevDmitriy_soft-horizon

./: CMakeLists.txt  Readme.md  config
application/: main.cpp
include/: database.h  solution.h
input/: 5ok.cvs  fixprise.cvs  lenta.cvs  magnit.cvs  miratorg.cvs
output/: user1.cvs  user2.cvs  user3.cvs  user4.cvs
source/: database.cpp  solution.cpp
